--- a/src/pages/checkout/checkout.css
+++ b/src/pages/checkout/checkout.css
@@ -1,3 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+* {
+    font-family: 'Inter', sans-serif;
+}
+
+/* Font */
+.font-body-regular-10 {
+    font-weight: 400;
+    font-size: 10px;
+}
+.font-body-regular-12 {
+    font-weight: 400;
+    font-size: 12px;
+}
+.font-body-regular-14 {
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.font-body-medium-10 {
+    font-weight: 500;
+    font-size: 10px;
+}
+.font-body-medium-12 {
+    font-weight: 500;
+    font-size: 12px;
+}
+.font-body-medium-14 {
+    font-weight: 500;
+    font-size: 14px;
+}
+
+.font-body-bold-10 {
+    font-weight: 700;
+    font-size: 10px;
+}
+.font-body-bold-12 {
+    font-weight: 700;
+    font-size: 12px;
+}
+.font-body-bold-14 {
+    font-weight: 700;
+    font-size: 14px;
+}
+/* ----------------------- */
+
+.font-title-regular-16 {
+    font-weight: 400;
+    font-size: 16px;
+}
+.font-title-regular-18 {
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.font-title-medium-16 {
+    font-weight: 500;
+    font-size: 16px;
+}
+.font-title-medium-18 {
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.font-title-bold-16 {
+    font-weight: 700;
+    font-size: 16px;
+}
+.font-title-bold-18 {
+    font-weight: 700;
+    font-size: 18px;
+}
+/* ----------------------- */
+
+.font-heading-regular-20 {
+    font-weight: 400;
+    font-size: 20px;
+}
+.font-heading-regular-24 {
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.font-heading-medium-20 {
+    font-weight: 500;
+    font-size: 20px;
+}
+.font-heading-medium-24 {
+    font-weight: 500;
+    font-size: 24px;
+}
+
+.font-heading-bold-20 {
+    font-weight: 700;
+    font-size: 20px;
+}
+.font-heading-bold-24 {
+    font-weight: 700;
+    font-size: 24px;
+}
+
 /* purple text */
 .text-keberangkatan,
 .text-kedatangan {
@@ -25,7 +127,6 @@
     padding: 10px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    font-size: 16px;
 }
 
 /* Card Seat */
@@ -34,14 +135,18 @@
     color: #FFFFFF;
     padding: 10px;
     border-radius: 10px;
-    font-size: 16px;
+}
+
+.card-seat-chosen {
+    background-color: #3C3C3C;
+    color: #FFFFFF;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 /* Form Label */
 .form-label {
-    font-weight: bold;
     color: #4B1979;
-    font-size: 14px;
 }
 
 /* Form Control */
@@ -87,8 +192,8 @@
 .seat {
     width: 40px;
     height: 40px;
-    font-size: 14px;
-    font-weight: bold;
+    font-size: 16px;
+    font-weight: 500;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -116,7 +221,6 @@
     background-color: #7126B5;
     border: none;
     border-radius: 12px;
-    font-size: 20px;
 }
 
 .btn-simpan-selected,
@@ -124,7 +228,6 @@
     background-color: #D0D0D0;
     border: none;
     border-radius: 12px;
-    font-size: 20px;
 }
 
 /* button lanjut-bayar */
@@ -133,18 +236,15 @@
     background-color: #FF0000;
     border: none;
     border-radius: 12px;
-    font-size: 20px;
 }
 
 /* alert */
 .alert-custom-red{
     background-color: #FF0000;
     color: #FFFFFF;
-    font-size: 16px;
 }
 
 .alert-custom-green{
     background-color: #73CA5C;
     color: #FFFFFF;
-    font-size: 16px;
 }
