--- a/src/pages/home/beranda.css
+++ b/src/pages/home/beranda.css
@@ -179,3 +179,18 @@
   border-radius: 0;
   border-bottom: solid #d0d0d0 1px;
 }
+
+.btn-simpan-modal {
+  background-color: #7126b5;
+  border: none;
+}
+
+.btn-simpan-modal:hover {
+  background-color: #5a2091;
+}
+
+.list-group-item.active {
+  background-color: #7126b5;
+  border-color: #7126b5;
+  color: white;
+}
