--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -48,3 +48,14 @@ body {
   display: flex;
   align-items: center;
 }
+
+.daftar-disini{
+  color: #7126B5;
+  text-decoration: none;
+}
+
+.toast-error{
+  margin-left: 25%;
+  border-radius: 20px !important;
+  background-color: red !important;
+}
