--- a/src/pages/payment/payment.css
+++ b/src/pages/payment/payment.css
@@ -115,6 +115,11 @@
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Title Navigation */
+.title-navigation {
+    color: #8A8A8A;
+}
+
 /* Card Header */
 .card-header {
     background-color: #3C3C3C;
@@ -157,15 +162,6 @@
 }
 
 
-/* button lanjut-bayar */
-.btn-lanjut-bayar,
-.btn-lanjut-bayar:hover {
-    background-color: #7126B5;
-    border: none;
-    border-radius: 12px;
-    color: #FFFFFF;
-}
-
 /* alert */
 .alert-custom-red{
     background-color: #FF0000;
@@ -184,3 +180,9 @@
     border-radius: 0;
 }
 
+/* button penerbangan lain */
+.btn-penerbangan-lain{
+    background-color: #D0B7E6;
+    color: #FFFFFF;
+    border-radius: 12px;
+}
