Integrating API to Register OTP

--- a/src/components/styles/auth/otp.css
+++ b/src/components/styles/auth/otp.css
@@ -28,3 +28,35 @@ p {
   display: flex;
   justify-content: center;
 }
+
+.alert-error {
+  background-color: red;
+  color: white;
+  width: fit-content;
+  margin: 0 auto;
+  text-align: center;
+  padding: 10px;
+  border-radius: 15px;
+  font-size: small;
+}
+
+.alert-registrasi {
+  background-color: #73CA5C;
+  color: white;
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+  padding: 10px;
+  border-radius: 15px;
+  font-size: small;
+}
+
+@media (max-width: 768px) { 
+  .back{
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
+  h4{
+    margin-left: 10px;
+  }
+ }
