--- a/src/components/styles/auth/login.css
+++ b/src/components/styles/auth/login.css
@@ -37,6 +37,7 @@
   border-radius: 16px;
   height: 50px;
   width: 100%;
+  border-color: #7126b5;
 }
 
 .button:hover {
@@ -55,6 +56,7 @@
 }
 
 .alert-message {
+  position: absolute;
   background-color: red;
   color: white;
   width: 50%;
