--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,40 @@
-body {
+html, body {
   font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow:auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 0.4rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 2px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #7126b5; 
+  border-radius: 2px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #783bb1;
+}
+
+.noScroll {
+  overflow-x: hidden !important;
+  overflow-y: hidden !important;
+  -ms-overflow-style: none;
+  scrollbar-width: none; 
+  -webkit-scrollbar-width: none; 
+  height: 100vh !important;
+  max-height: 100vh;
+  min-height: 100vh;
 }
